--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 	<title>Restaurant "de Vergulde Badaend"</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-	<script src="javascript/main.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="javascript/database.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="https://kit.fontawesome.com/61e3c0206e.js" crossorigin="anonymous"></script>
 </head>
-<body onload="initialize()">
+<body>
 	<div class="container">
 		<h1>Restaurant <span class="golden">'de Vergulde Badeend'</span></h1>
 		<div class="row">
@@ -104,10 +102,12 @@
 						<tbody id="orderOutput">
 						</tbody>
 					</table>
-					<span id="total">Totaalbedrag is: &euro;</span>
+					<span id="total"></span>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script src="javascript/main.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="javascript/database.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
